--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,15 @@
 }
 
 *{
+  
+  
     font-family: 'Open Sans', sans-serif;
-    margin:0; padding:0;
+    margin:0; padding:10;
     box-sizing: border-box;
     text-transform: capitalize;
     text-decoration: none;
     transition: all .5s cubic-bezier(.37,1.14,.26,1.24);
+  font-size:4vh;
 }
 
 *::selection{
@@ -22,3 +25,59 @@ html{
     font-size: 50%;
     overflow-x: hidden;
   }
+
+  
+
+/* Add a background color and some padding to the body */
+body {
+  background-color: #f4f4f4
+}
+
+/* Style the heading with a different font and color */
+.heading {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 4rem;
+  font-weight: bold;
+  color: #333;
+}
+
+/* Style the form controls */
+.forms  {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+
+.button1 {
+  float:left;
+  width:50px;
+  font-size: 10px;
+  
+}
+.button2{
+  width:50px;
+  font-size: 10px;
+  
+}
+.buttons{
+  width:50px;
+}
+
+.card {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.card:hover {
+  transform: scale(1.05);
+}
+
+
+.card {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
