--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,8 @@ html{
 
   
 
-/* Add a background color and some padding to the body */
-#root{
+/* Add a background color and some padding to the bod*/
+body{
   padding:0;
   margin:0;
   height: 100%;
