--- a/src/Comp.jsx/NoteList.module.css
+++ b/src/Comp.jsx/NoteList.module.css
@@ -6,3 +6,25 @@
   translate: 0 -5px;
   box-shadow : 0 5px 5px rgba(0,0,0,0.3);
 }
+
+.heading{
+  text-align: center;
+  font-size: 7vh;
+}
+.main{
+  padding-top: 30px;
+  
+}
+
+.buttons{
+  border : none;
+  height:4em;
+  width: 6em;
+ font-size: 5vh;
+ background-color: #370140;
+}
+.customPlaceholder{
+  width: 100%;
+  height: 3em;
+  font-size: 2em;
+}
